--- a/app/assets/stylesheets/node_editor.css
+++ b/app/assets/stylesheets/node_editor.css
@@ -1493,6 +1493,12 @@
   margin: 0;
 }
 
+.condition-form-checkbox input[type="checkbox"] {
+  width: 13px;
+  height: 13px;
+  top: 3px;
+}
+
 .condition-form-comparison__body {
   padding-top: 6px;
 }
